--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7,3 +7,91 @@
 th {
   text-align: left;
 }
+
+.header {
+  height: 75px;
+  width: 100%;
+  margin-top: 0px;
+  border-bottom: 3px solid gray;
+  background-color: skyblue;
+}
+
+header div {
+  display: inline-block;
+}
+
+nav {
+  clear: both;
+  padding-top: 12px;
+}
+
+nav li {
+  list-style-type: none;
+  float: right;
+  padding-right: 30px;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+.float-right {
+  float: right;
+}
+
+.float-left {
+  float: left;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+.padding-bottom-30 {
+  padding-bottom: 30px;
+}
+
+.outline-blue-1 {
+  border: gray solid 3px;
+  border-radius: 10%;
+}
+
+
+.width-500 {
+  width: 500px;
+}
+
+.centered {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.margin-top-100 {
+  margin-top: 100px;
+}
+
+.flashcard-background-img {
+  background: url(flashcard_big.gif) no-repeat center center fixed;
+  background-size: cover;
+}
+
+.button {
+  background-color: #7EB8CB;
+  margin-top: 20px;
+}
+
+* {
+  font-family: arial;
+}
+
+.header-pic {
+  padding-top: 2px;
+  padding-left: 2px;
+  width: 70px;
+  height: 70px;
+}
+
+.h-100 {
+  height: 100%;
+}
+
