--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,7 @@
 <body>
   <header class='header'>
     <div class='float-left'>
-      <a href="/"><img class='header-pic' src="monamiga.jpg" alt='pic of mon amiga'><h1 id="site-title">monamiga Overflow</h1></a>
+      <a href="/"><img class='header-pic' src="/monamiga.jpg" alt='pic of mon amiga'><h1 id="site-title">monamiga Overflow</h1></a>
     </div>
     <div class='float-right h-100'>
       <nav>
