--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,7 @@
 <div class="container">
-  <h1>INDEX</h1>
+  <% @questions.each do |question| %>
+    <h4><%= question.title %></h4>
+      <%= question.content %>
+    <hr>
+  <% end %>
 </div>
