fix login/logout routes

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -28,6 +28,7 @@
           <li class="no-bullets no-underline padding-right-15"><a class=' no-underline' href="/users/new">register</a></li>
           <li class="no-bullets no-underline padding-right-15"><a class=' no-underline' href="/users/login">login</a></li>
           <li class="no-bullets no-underline padding-right-15"><a class=' no-underline' href="/users">home</a></li>
+          <li class="no-bullets no-underline padding-right-15"><a class=' no-underline' href="/logout">logout</a></li>
         </ul>
       </nav>
     </div>
