--- a/public/css/application.css
+++ b/public/css/application.css
@@ -105,3 +105,13 @@ nav a {
 	text-decoration: none;
 }
 
+.q-title {
+  font-weight: bold;
+  font-size: 1.5em;
+  display: inline-block;
+  margin-bottom: 15px;
+}
+
+.q-content {
+  line-height: 1.5;
+}
