Add questions routes, edit misc CSS

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -21,7 +21,7 @@
   <br>
   <form class='centered' method='post' action='/users/login'>
     <p>Email:</p>
-    <input type='text' name='user[email]'>
+    <input autofocus type='text' name='user[email]'>
     <p>Password:</p>
     <input type='password' name='user[password]'>
     <br><br>
