--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,10 +1,18 @@
 <div class="container">
-	<h2>Questions</h2>
-
-	<div class="user_page">
+  <a href="/questions/new"><button class='new-q-button'>Submit a New Question</button></a>
+  <div class="user_page questions">
+	<h1>Questions you've asked:</h1>
+  <%if @user.questions.length == 1%>
 		<% @user.questions.each do |question| %>
 			<span class="q-title"><%= question.title %></span>
 			<span class="q-content"><%= question.content %></span>
-		<% end %>
+  	<% end %>
+  <% else %>
+    <% @user.questions.each do |question| %>
+      <span class="q-title"><%= question.title %></span>
+      <span class="q-content"><%= question.content %></span>
+      <hr>
+    <% end %>
+  <% end %>
 	</div>
 </div>
