--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,9 @@
-<div class="container">
+<div>
+  <a href="/questions/new"><button class='new-q-button'>Submit a New Question</button></a>
+</div>
+<div class='questions'>
   <% @questions.each do |question| %>
-	<span class="q-title"><%= question.title %></span>
-	<span class="q-content"><%= question.content %></span>
-    <hr>
+   <a href="/questions/<%= question.id %>"><span class="q-title"><%= question.title %></span></a>
+   <span class="q-content"><%= question.content %></span>
   <% end %>
 </div>
