--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,9 +1,10 @@
 .container {
   margin: 20px auto;
-  width: 600px;
+  width: 800px;
   padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+/*  border: 1px dotted black;*/
 }
+
 th {
   text-align: left;
 }
@@ -14,6 +15,10 @@ th {
   margin-top: 0px;
   border-bottom: 3px solid gray;
   background-color: skyblue;
+}
+
+a {
+  text-decoration: none;
 }
 
 header div {
@@ -97,21 +102,107 @@ nav a {
 }
 
 #site-title {
+  margin-top: 10px;
 	float: right;
 	width: 400px;
 	margin-left: 25px;
 	position: relative;
 	display: inline-block;
 	text-decoration: none;
+  color: black;
+  font-weight: 300;
 }
 
 .q-title {
   font-weight: bold;
   font-size: 1.5em;
-  display: inline-block;
-  margin-bottom: 15px;
+  display: block;
+  padding-top: 15px;
+  margin: 15px 0 15px 0;
+  color: black;
 }
 
 .q-content {
   line-height: 1.5;
+  display: block;
+  margin: 15px 0 15px 0;
+  padding-bottom: 15px;
 }
+
+#monamiga {
+  color: white;
+  text-shadow: 2px 2px blue;
+  font-family: cursive;
+}
+
+.textarea-title {
+  width: 90%;
+  height: 40px;
+}
+
+.textarea-content {
+  width: 90%;
+  height: 300px;
+}
+
+.new-q-button {
+  -moz-box-shadow: 0px 10px 14px -7px #276873;
+  -webkit-box-shadow: 0px 10px 14px -7px #276873;
+  box-shadow: 0px 10px 14px -7px #276873;
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
+  background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
+  background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
+  background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
+  background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
+  background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
+  background-color:#599bb3;
+  -moz-border-radius:8px;
+  -webkit-border-radius:8px;
+  border-radius:8px;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:17px;
+  padding:13px 32px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #3d768a;
+  float: right;
+  margin-top: 30px;
+}
+
+.new-q-button:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
+  background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
+  background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
+  background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
+  background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
+  background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
+  background-color:#408c99;
+}
+.new-q-button:active {
+  position:relative;
+  top:1px;
+}
+
+.questions {
+  clear: both;
+  padding-top: 40px;
+}
+
+.extra-padding {
+  padding-top: 30px;
+  padding-bottom: 70px;
+}
+
+.error-msg {
+  color: red;
+  text-align: left;
+}
+
+#form-good-questions-link {
+  text-decoration: underline;
+}
+
