Add error messages

--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -12,7 +12,7 @@
     <% end %>
   <% end %>
   </ul>
-  <form method='post' action='/questions/new'>
+  <form method='post' action='/questions'>
     <p>Title of your question:</p>
     <textarea class="textarea-title" name='question[title]'></textarea>
     <p>Details specifying your problem and desired outcome. Be specific!:</p>
