--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,13 +11,13 @@
       <a href="/"><img class='upvote-button' src="/up-arrow.png" alt='upvote'>
       </a>
       </div>
-      <p class='num-of-votes'><%=  %>0</p>
+      <p class='num-of-votes'><%= question.votes_sum %>0</p>
       <div class="upvote-button">
-      <a href="/"><img class='downvote-button' src="/down-arrow.png" alt='upvote'>
+      <a href="/questions/<%= question.id %>/upvote"><img class='downvote-button' src="/down-arrow.png" alt='upvote'>
       </a>
       </div>
     </div>
-    <a href="/questions/<%= question.id %>"><span class="q-title"><%= question.title %></span></a>
+    <a href="/questions/<%= question.id %>/downvote""><span class="q-title"><%= question.title %></span></a>
     <span class="q-content"><%= question.content %></span>
   </div>
   <% end %>
