--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,13 +1,22 @@
 <div class="container">
   <a href="/questions/new"><button class='new-q-button'>Submit a New Question</button></a>
   <div class="user_page questions">
-	<h1>Questions you've asked:</h1>
-  <%if @user.questions.any? %>
-    <% @user.questions.each do |question| %>
-      <span class="q-title"><a href="/question/<%= question.id %>"><%= question.title %></a></span>
-			<span class="q-content"><%= question.content %></span>
-      <hr>
-  	<% end %>
-  <% end %>
+	  <h1>Questions you've asked:</h1>
+    <%if @user.questions.any? %>
+      <% @user.questions.each do |question| %>
+        <div class="voting-buttons">
+          <div class="upvote-button">
+            <a href="/questions/<%= question.id %>/upvote"><img class='upvote-button' src="/up-arrow.png" alt='upvote'></a>
+          </div>
+          <p class='num-of-votes'><%= question.votes_sum %></p>
+          <div class="downvote-button">
+          <a href="/questions/<%= question.id %>/downvote"><img class='downvote-button' src="/down-arrow.png" alt='downvote'></a>
+          </div>
+        </div>
+        <a href="/questions/<%= question.id %>""><span class="q-title"><%= question.title %></span></a>
+        <span class="q-content"><%= question.content %></span>
+      </div>
+      <% end %>
+    <% end %>
 	</div>
 </div>
