--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -1,8 +1,17 @@
   <a href="/questions/new"><button class='new-q-button'>Submit a New Question</button></a>
   <div class="user_page questions">
-  <span class="q-title"><%= @question.title %></span>
-  <span class="q-content"><%= @question.content %></span>
-
+    <div class="voting-buttons">
+      <div class="upvote-button">
+        <a href="/questions/<%= @question.id %>/upvote"><img class='upvote-button' src="/up-arrow.png" alt='upvote'></a>
+      </div>
+      <p class='num-of-votes'><%= @question.votes_sum %></p>
+      <div class="downvote-button">
+        <a href="/questions/<%= @question.id %>/downvote"><img class='downvote-button' src="/down-arrow.png" alt='downvote'></a>
+      </div>
+    </div>
+    <a href="/questions/<%= @question.id %>""><span class="q-title"><%= @question.title %></span></a>
+    <span class="q-content"><%= @question.content %></span>
+  </div>
   <% if @question.answers.any?  %>
     <span class='begin-answer-column'><%= @question.answers.count %> Answers</span> <br><br>
       <% @question.answers.each do |answer| %>
